# WebProject

./: .gitignore  .~lock.Balance_de_carga_Diurno_2025_2026_1er_periodo_ICS_Fac_Ciberseguridad.xlsx#  Balance_de_carga_Diurno_2025_2026_1er_periodo_ICS_Fac_Ciberseguridad.xlsx  README.md
.github/: copilot-instructions.md
backend/: Cargo.toml  Dockerfile  schema.sql
backend/migrations/: 001_add_balances.sql  002_add_audit_logs.sql  003_balance_fragments.sql  004_non_academic_periods.sql  005_system_settings.sql  006_add_must_change_password.sql
backend/src/: lib.rs  main.rs  types.rs
backend/src/database/: asignaturas.rs  audit_logs.rs  balance.rs  balance_fragments.rs  balances.rs  mod.rs  prelude.rs  schema_migrations.rs  system_settings.rs  usuarios.rs
backend/src/routes/: audit.rs  balance.rs  login.rs  manager.rs  mod.rs  settings.rs
backend/src/utils/: audit.rs  cors.rs  db.rs  excel_export.rs  jwt.rs  mod.rs  rate_limiter.rs  validation.rs
frontend/: REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  shims-vue.d.ts
frontend/src/components/: AppButton.vue  AppCard.vue  AppConfirmDialog.vue  AppInput.vue  AppLayout.vue  AppModal.vue  AppNotification.vue  AppTabs.vue  BalanceConfigCard.vue  BalanceFinalTable.vue  BalanceFullView.vue  BalanceViewFinalTable.vue  BalanceViewTable.vue  BalanceWeekTable.vue  BaseButton.vue  CalculationsTable.vue  ConfirmModal.vue  QuickAccessCard.vue  StatsCard.vue  Toast.vue
(+38 files in other folders)
