[package]
name = "web_project"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
bcrypt = "0.17"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
regex = "1.10"
rust_xlsxwriter = "0.79"